cmd/smoketest-gateway/k8s/02-smoketest-gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: smoketest-gateway
  namespace: kube-system
  annotations:
    "sidecar.jaegertracing.io/inject": "true"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: smoketest-gateway
  template:
    metadata:
      labels:
        app: smoketest-gateway
    spec:
      containers:
        - name: smoketest-gateway
          image: uhub.service.ucloud.cn/entropypool/smoketest-gateway:latest
          imagePullPolicy: Always
          volumeMounts:
            - name: service-config
              mountPath: /etc/SmoketestGateway
      volumes:
        - name: service-config
          configMap:
            name: smoketest-gateway-config
            items:
              - key: service-conf
                path: SmoketestGateway.viper.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: smoketest-gateway
  namespace: kube-system
spec:
  ports:
    - name: http
      port: 50760
      targetPort: 50760
    - name: grpc
      port: 50761
      targetPort: 50761
    - name: healthz
      port: 50762
      targetPort: 50762
    - name: prometheus
      port: 50763
      targetPort: 50763
  selector:
    app: smoketest-gateway
