cmd/smoketest-gateway/k8s/04-traefik-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: smoketest-gateway-traefik-app-ingress
  namespace: kube-system
  annotations:
    k8s.kuboard.cn/displayName: smoketest-gateway-traefik-app
    k8s.kuboard.cn/workload: smoketest-gateway-traefik-app
    kubernetes.io/ingress.class: "traefik-internet"
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.middlewares:
      kube-system-strip-smoketest-gateway-prefix@kubernetescrd,
      kube-system-common-headers@kubernetescrd,
      kube-system-headers-appid-to-body@kubernetescrd,
      kube-system-headers-userid-to-body@kubernetescrd,
      kube-system-headers-app-login-token-to-body@kubernetescrd,
      kube-system-app-rbac-auth@kubernetescrd

spec:
  rules:
    - host: api.npool.top
      http: &http_rules
        paths:
          - path: /api/smoketest/v1/version
            backend:
              serviceName: smoketest-gateway
              servicePort: 50760
    - host: api.procyon.vip
      http: *http_rules
    - host: api.xpool.top
      http: *http_rules
    - host: api.ohhash.com
      http: *http_rules
    - host: api.development.npool.top
      http: *http_rules

---

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: smoketest-gateway-traefik-app-user-ingress
  namespace: kube-system
  annotations:
    k8s.kuboard.cn/displayName: smoketest-gateway-traefik-app-user
    k8s.kuboard.cn/workload: smoketest-gateway-traefik-app-user
    kubernetes.io/ingress.class: "traefik-internet"
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.middlewares:
      kube-system-strip-smoketest-gateway-prefix@kubernetescrd,
      kube-system-http-redirect-https@kubernetescrd,
      kube-system-common-headers@kubernetescrd,
      kube-system-headers-appid-to-body@kubernetescrd,
      kube-system-headers-userid-to-body@kubernetescrd,
      kube-system-headers-app-login-token-to-body@kubernetescrd,
      kube-system-app-user-role-rbac-auth@kubernetescrd

spec:
  rules:
    - host: api.npool.top
      http: &http_rules
        paths:
          - path: /api/smoketest/v1/get/testcases
            backend:
              serviceName: smoketest-gateway
              servicePort: 50760
          - path: /api/smoketest/v1/create/testcase
            backend:
              serviceName: smoketest-gateway
              servicePort: 50760
          - path: /api/smoketest/v1/update/testcase
            backend:
              serviceName: smoketest-gateway
              servicePort: 50760
          - path: /api/smoketest/v1/delete/testcase
            backend:
              serviceName: smoketest-gateway
              servicePort: 50760
          - path: /api/smoketest/v1/create/module
            backend:
              serviceName: smoketest-gateway
              servicePort: 50760
          - path: /api/smoketest/v1/get/modules
            backend:
              serviceName: smoketest-gateway
              servicePort: 50760
          - path: /api/smoketest/v1/delete/module
            backend:
              serviceName: smoketest-gateway
              servicePort: 50760
          - path: /api/smoketest/v1/create/testplan
            backend:
              serviceName: smoketest-gateway
              servicePort: 50760
          - path: /api/smoketest/v1/update/testplan
            backend:
              serviceName: smoketest-gateway
              servicePort: 50760
          - path: /api/smoketest/v1/delete/testplan
            backend:
              serviceName: smoketest-gateway
              servicePort: 50760
          - path: /api/smoketest/v1/get/testplans
            backend:
              serviceName: smoketest-gateway
              servicePort: 50760
          - path: /api/smoketest/v1/create/plantestcase
            backend:
              serviceName: smoketest-gateway
              servicePort: 50760
          - path: /api/smoketest/v1/update/plantestcase
            backend:
              serviceName: smoketest-gateway
              servicePort: 50760
          - path: /api/smoketest/v1/delete/plantestcase
            backend:
              serviceName: smoketest-gateway
              servicePort: 50760
          - path: /api/smoketest/v1/get/plantestcases
            backend:
              serviceName: smoketest-gateway
              servicePort: 50760
    - host: api.procyon.vip
      http: *http_rules
    - host: api.xpool.top
      http: *http_rules
    - host: api.ohhash.com
      http: *http_rules
    - host: api.procyon.xpool.top
      http: *http_rules
    - host: api.lpsecretbase.com
      http: *http_rules
    - host: api.jh-testing.npool.top
      http: *http_rules
    - host: api.japan-procyon-production.npool.top
      http: *http_rules
    - host: api.development.npool.top
      http: *http_rules
